# funda-tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  funda.py  pyproject.toml  requirements.txt  utils.py
fundatracker/: __main__.py  funda.py
samples/: full-hit-result-new.json  full-hit-result-old.json  full-hit-result.json  request-new.ndjson
src/fundatracker/: __main__.py  cli.py  funda.py  utils.py
tests/: fixtures.py  test_funda.py
